--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 
 		<div class="row justify-content-center mt-5">
 			<div class="col-md-6 text-center ftco-animate">
-				<p><a href="#" class="btn btn-primary py-4 px-5">Download CV</a></p>
+				<p><a href="https://drive.google.com/file/d/1ZbL7K5wLXmdLuVTNyf3ZvyeaUTY-nG9B/view?usp=sharing" class="btn btn-primary py-4 px-5">Download CV</a></p>
 			</div>
 		</div>
 		
@@ -531,7 +531,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="#">Resumelink</a></p>
+	            <p><a href="https://drive.google.com/file/d/1ZbL7K5wLXmdLuVTNyf3ZvyeaUTY-nG9B/view?usp=sharing">Resumelink</a></p>
 	          </div>
           </div>
 
